Custom front page. Initial version
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@6 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,91 @@
 <html>
   <body>
-    This is the default project content.
-  </body>
-</html>
+<div align="center"><font color="#990000" size="+2">Welcome to the Java Game Technology Utilities Project! </font> </div>
+<table width="100%" border="0" cellspacing="1" cellpadding="0">
+  <tr> 
+    <td width="66%" valign="top"> <table width="100%" height="358" border="0" cellpadding="5" cellspacing="1">
+        <tr> 
+          <td valign="top"><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
+              <tr> 
+                <td width="589" valign="top" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Overview</strong></font></div></td>
+              </tr>
+              <tr> 
+                <td valign="top" bgcolor="#FFFFFF"><div align="justify"> 
+                    <p>The JUtils Project hosts an implementation of a set of APIs 
+		       utilized by other Java Game Technology Group projects (eg JInput,JOAl, JOGL).  
+		       Some of those other projects may have build and/or run-time dependancies on
+		       the jutils.jar file which is built from the source hosted here.
+                     </p>
+                  </div></td>
+              </tr>
+            </table></td>
+        </tr>
+        <tr> 
+          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
+              <tr> 
+                <td width="589" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Project 
+                    Status</strong></font></div></td>
+              </tr>
+              <tr> 
+                <td bgcolor="#FFFFFF"><div align="justify">The intial implementation 
+                    of the JUtils library is available 
+                    for download from <a href=" http://jutils.dev.java.net/source/browse/jutils/ ">CVS</a>. 
+                    <p>The initial release contains support classes for a plug-in system that handles
+		    an arbitrary number of arbitrarily complex plugins that each consist of a JAR
+		    file and support files (other jar files, native libs, etc.) </p>
+
+		    <p>For more information, see the docs for the Plugins class in the CVS tree.</p>
+              </tr>
+            </table></td>
+        </tr>
+        <tr> 
+          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
+              <tr> 
+                <td width="589" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Getting 
+                    Started </strong></font></div></td>
+              </tr>
+              <tr> 
+                <td valign="top" bgcolor="#FFFFFF"><p>This project has been built 
+                    in the following environment:</p>
+                  <ul>
+                    <li> Win32 (Win 2000 in the case of our machine)</li>
+                    <li> Sun J2SDK 1.4.2 (available at <a href=" http://java.sun.com " target="_blank">java.sun.com</a>)</li>
+                    <li> MinGW 2.0.0 plus the following updates: (all available 
+                      at <a href=" http://www.mingw.org " target="_blank">www.mingw.org</a>) 
+                      <ul>
+                        <li>binutils 2.13.90</li>
+                        <li> w32api-2.2</li>
+                        <li> mingw-runtime-2.4</li>
+                      </ul>
+                    </li>
+                    <li> ANT 1.4.1 (available at <a href=" http://www.apache.org " target="_blank">www.apache.org</a>)</li>
+	          </ul></td>
+              </tr>
+            </table></td>
+        </tr>
+      </table>
+      <p>&nbsp;</p></td>
+    <td valign="top"> 
+      <table width="100%" border="0" cellspacing="1" cellpadding="5">
+        <tr>
+          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
+              <tr> 
+                <td valign="top" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Useful 
+                    Links</strong></font></div></td>
+              </tr>
+              <tr> 
+                <td valign="top" bgcolor="#FFFFFF"><ul>
+                  
+                </ul></td>
+              </tr>
+            </table></td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+        </tr>
+      </table></td>
+  </tr>
+</table>
+
+</body>
+</html> 
