Add link to dev agreement
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@11 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/www/index.html
+++ b/www/index.html
@@ -91,7 +91,11 @@
           <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
               <tr> 
                 <td valign="top" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Useful 
-                    Links</strong></font></div></td>
+                    Links</strong></font></div></td></tr>
+              <tr><td valign="top" bgcolor="#FFFFFF">
+                    <a
+href="http://games-core.dev.java.net/sun_contrib_051903_javagames.pdf">
+Developer Agreement </a></td>
               </tr>
               <tr> 
                 <td valign="top" bgcolor="#FFFFFF"><ul>
