--- a/www/index.html
+++ b/www/index.html
@@ -1,21 +1,23 @@
 <html>
   <body>
-<div align="center"><IMG SRC="http://games.dev.java.net/images/navbar.gif" WIDTH=454 HEIGHT=43 BORDER=0 ALT="" USEMAP="#navbar_Map"></div>
-<MAP NAME="navbar_Map">
-<AREA SHAPE="rect" ALT="Wiki" COORDS="340,0,386,43" HREF="http://wiki.java.net/bin/view/Games">
-<AREA SHAPE="rect" ALT="Weblogs" COORDS="286,0,339,43" HREF="http://weblogs.java.net/weblogs/project/games">
-<AREA SHAPE="rect" ALT="Forums" COORDS="216,0,285,43" HREF="http://www.javagaming.org/cgi-bin/JGNetForums/YaBB.cgi" target="_top">
-<AREA SHAPE="rect" ALT="JavaGames Home" COORDS="91,0,215,43" HREF="http://community.java.net/games">
-<AREA SHAPE="rect" ALT="www.java.net" COORDS="1,1,91,44" HREF="http://www.java.net" TARGET="_self">
-</MAP>
-<div align="center"><font color="#990000" size="+2">Welcome to the Java Input API Project!  </font> </div>
+<div Align=center> 
+  <img ID="NavBar" WIDTH=800 HEIGHT=66 SRC="http://games.dev.java.net/images/navbar2.gif" VSPACE=0 HSPACE=0 ALIGN="TOP" BORDER=0 USEMAP="#NavBar_MAP" NOFINSIDE="~!   ~!" > </div>
+  <MAP NAME="NavBar_Map"><AREA SHAPE="rect" ALT="Projects" COORDS="347,15,452,46" HREF="http://games.dev.java.net" TARGET="_self">
+    <AREA SHAPE="rect" ALT="Wiki" COORDS="641,15,706,47" HREF="http://wiki.java.net/bin/view/Games">
+    <AREA SHAPE="rect" ALT="Weblogs" COORDS="564,15,630,46" HREF="http://weblogs.java.net/weblogs/project/games">
+    <AREA SHAPE="rect" COORDS="463,15,548,45" HREF="http://www.javagaming.org/cgi-bin/JGNetForums/YaBB.cgi" target="_top" ALT="Forums">
+    <AREA SHAPE="rect" ALT="JavaGames Home" COORDS="136,15,334,48" HREF="http://community.java.net/games">
+    <AREA SHAPE="rect" ALT="Java.net" COORDS="21,15,126,46" HREF="http://www.java.net" TARGET="_self">
+  </MAP>
+
+<div align="center"><font color="#005177" size="+2">Welcome to the Java Input API Project!  </font> </div>
 <table width="100%" border="0" cellspacing="1" cellpadding="0">
   <tr>
     <td width="66%" valign="top"> <table width="100%" height="358" border="0" cellpadding="5" cellspacing="1">
         <tr>
-          <td valign="top"><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
+          <td valign="top"><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#6E94B7">
               <tr>
-                <td width="589" valign="top" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Overview</strong></font></div></td>
+                <td width="589" valign="top" bgcolor="#6E94B7"><div align="left"><font color="#FFFFFF"><strong>Overview</strong></font></div></td>
               </tr>
               <tr>
                 <td valign="top" bgcolor="#FFFFFF"><div align="justify">
@@ -36,9 +38,9 @@
             </table></td>
         </tr>
         <tr>
-          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
+          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#6E94B7">
               <tr>
-                <td width="589" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Project
+                <td width="589" bgcolor="#6E94B7"><div align="left"><font color="#FFFFFF"><strong>Project
                     Status</strong></font></div></td>
               </tr>
               <tr>
@@ -54,9 +56,9 @@
             </table></td>
         </tr>
         <tr>
-          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
+          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#6E94B7">
               <tr>
-                <td width="589" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Getting
+                <td width="589" bgcolor="#6E94B7"><div align="left"><font color="#FFFFFF"><strong>Getting
                     Started </strong></font></div></td>
               </tr>
               <tr>
@@ -98,16 +100,16 @@
     <td valign="top">
       <table width="100%" border="0" cellspacing="1" cellpadding="5">
         <tr>
-          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#990000">
+          <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#6E94B7">
               <tr>
-                <td valign="top" bgcolor="#990000"><div align="left"><font color="#FFFFFF"><strong>Useful
+                <td valign="top" bgcolor="#6E94B7"><div align="left"><font color="#FFFFFF"><strong>Useful
                     Links</strong></font></div></td></tr>
               <tr><td valign="top" bgcolor="#FFFFFF">
                     <a
 href="http://games-core.dev.java.net/sun_contrib_051903_javagames.pdf">
 Developer Agreement </a></td>
               </tr>
-              <tr>
+              <tr> 
                 <td valign="top" bgcolor="#FFFFFF"><ul>
 
                 </ul></td>
