--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <html>
-  <body>
+  <body bgcolor="f5f5f5">
 <div Align=center> 
   <img ID="NavBar" WIDTH=800 HEIGHT=66 SRC="http://games.dev.java.net/images/navbar2.gif" VSPACE=0 HSPACE=0 ALIGN="TOP" BORDER=0 USEMAP="#NavBar_MAP" NOFINSIDE="~!   ~!" > </div>
   <MAP NAME="NavBar_Map"><AREA SHAPE="rect" ALT="Projects" COORDS="347,15,452,46" HREF="http://games.dev.java.net" TARGET="_self">
@@ -20,7 +20,7 @@
                 <td width="589" valign="top" bgcolor="#6E94B7"><div align="left"><font color="#FFFFFF"><strong>Overview</strong></font></div></td>
               </tr>
               <tr>
-                <td valign="top" bgcolor="#FFFFFF"><div align="justify">
+                <td valign="top" bgcolor="#F8F8F8"><div align="justify">
                     <p>The JInput Project hosts an implementation of an API for game controller
                      discovery and polled input.  It is part of a suite of open-source technologies
                       initiated by the Game Technology Group at Sun Microsystems with intention of
@@ -44,7 +44,7 @@
                     Status</strong></font></div></td>
               </tr>
               <tr>
-                <td bgcolor="#FFFFFF"><div align="justify">The intial implementation
+                <td bgcolor="#F8F8F8"><div align="justify">The intial implementation
                     of the Java Input API is available for download from
                     <a href=" http://jinput.dev.java.net/source/browse/jinput/ ">CVS</a>.
                     The initial release only contains a plug-in for Win32.
@@ -62,7 +62,7 @@
                     Started </strong></font></div></td>
               </tr>
               <tr>
-                <td valign="top" bgcolor="#FFFFFF"><p>This project has been built
+                <td valign="top" bgcolor="#F8F8F8"><p>This project has been built
                     in the following environment:</p>
                   <ul>
                     <li> Win32 (Win 2000 in the case of our machine)</li>
@@ -104,7 +104,7 @@
               <tr>
                 <td valign="top" bgcolor="#6E94B7"><div align="left"><font color="#FFFFFF"><strong>Useful
                     Links</strong></font></div></td></tr>
-              <tr><td valign="top" bgcolor="#FFFFFF">
+              <tr><td valign="top" bgcolor="#F8F8F8">
                     <a
 href="http://games-core.dev.java.net/sun_contrib_051903_javagames.pdf">
 Developer Agreement </a></td>
