--- a/www/index.html
+++ b/www/index.html
@@ -49,10 +49,8 @@
                 <td bgcolor="#F8F8F8"><div align="justify">The intial implementation
                     of the Java Input API is available for download from
                     <a href=" http://jinput.dev.java.net/source/browse/jinput/ ">CVS</a>.
-                    The initial release only contains a plug-in for Win32.
-                    Plug-ins for other platforms (eg Linux, Mac, etc.)  are expected to be
-                    forthcoming either from the Java Game Technology Group or other project
-                    contributors. </div></td>
+                    This release contains a plug-in for Win32i, Linux, and OSX. The nightly builds of this technology are available at <a href="https://games-binaries.dev.java.net/build/index.html">Nightly Builds</a>.
+                    </div></td>
 
               </tr>
             </table></td>
@@ -68,6 +66,7 @@
                     in the following environment:</p>
                   <ul>
                     <li> Win32 (Win 2000 in the case of our machine)</li>
+		    <li> OSX 10.2.x or greater</li>
                     <li> Sun J2SDK 1.4.2 (available at <a href=" http://java.sun.com " target="_blank">java.sun.com</a>)</li>
                     <li> MinGW 2.0.0 plus the following updates: (all available
                       at <a href=" http://www.mingw.org " target="_blank">www.mingw.org</a>)
