Added jinput.controllerPluginPath property to package documentation
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@75 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/coreAPI/src/java/net/java/games/input/package.html
+++ b/coreAPI/src/java/net/java/games/input/package.html
@@ -6,7 +6,8 @@ Top level package for JInput.
 
 <h2>Package Specification</h2>
 
-Use -D jinput.plugins (or net.java.games.input.plugins) and specifiy a list of class name to over ride the plugins system. This will force the classes passed to be loaded first, then plugins will be searched for in the default manner (./controller/*.jar)
+Use -D jinput.plugins (or net.java.games.input.plugins) and specifiy a list of class name to over ride the plugins system. This will force the classes passed to be loaded first, then plugins will be searched for in the default manner (./controller/*.jar)<BR/>
+Use -D jinput.controllerPluginPath to change the path the plugins mechanism will use to search for plugin Jars.
 
 </body>
 </html>
