--- a/www/index.html
+++ b/www/index.html
@@ -1,17 +1,7 @@
 <html>
   <body bgcolor="f5f5f5">
 <div Align=center> 
-  <img ID="NavBar" WIDTH=800 HEIGHT=64 SRC="http://games.dev.java.net/images/navbar2p.gif" VSPACE=0 HSPACE=0 ALIGN="TOP" BORDER=0 USEMAP="#NavBar_MAP" NOFINSIDE="~!   ~!" > </div>
   
-<MAP NAME="NavBar_Map">
-  <AREA SHAPE="rect" ALT="Projects" COORDS="356,14,440,46" HREF="http://games.dev.java.net" TARGET="_self">
-  <AREA SHAPE="rect" ALT="Wiki" COORDS="643,14,695,46" HREF="http://wiki.java.net/bin/view/Games">
-  <AREA SHAPE="rect" ALT="Weblogs" COORDS="562,15,624,46" HREF="http://weblogs.java.net/weblogs/project/games">
-  <AREA SHAPE="rect" COORDS="463,16,541,45" HREF="http://www.javagaming.org/cgi-bin/JGNetForums/YaBB.cgi" target="_top" ALT="Forums">
-  <AREA SHAPE="rect" ALT="JavaGames Home" COORDS="147,16,334,48" HREF="http://community.java.net/games">
-  <AREA SHAPE="rect" ALT="Java.net" COORDS="21,15,128,46" HREF="http://www.java.net" TARGET="_self">
-</MAP>
-
 <div align="center"><font color="#005177" size="+2">Welcome to the Java Input API Project!  </font> </div>
 <table width="100%" border="0" cellspacing="1" cellpadding="0">
   <tr>
@@ -49,7 +39,7 @@
                 <td bgcolor="#F8F8F8"><div align="justify">The intial implementation
                     of the Java Input API is available for download from
                     <a href=" http://jinput.dev.java.net/source/browse/jinput/ ">CVS</a>.
-                    This release contains a plug-in for Win32i, Linux, and OSX. The nightly builds of this technology are available at <a href="https://games-binaries.dev.java.net/build/index.html">Nightly Builds</a>.
+                    This release contains a plug-in for Win32i, Linux, and OSX. Builds are available in the <a href="https://jinput.dev.java.net/servlets/ProjectDocumentList?folderID=5330&expandFolder=5330&folderID=5330">Documents and Files</a> area.
                     </div></td>
 
               </tr>
@@ -65,29 +55,17 @@
                 <td valign="top" bgcolor="#F8F8F8"><p>This project has been built
                     in the following environment:</p>
                   <ul>
-                    <li> Win32 (Win 2000 in the case of our machine)</li>
-		    <li> OSX 10.2.x or greater</li>
-                    <li> Sun J2SDK 1.4.2 (available at <a href=" http://java.sun.com " target="_blank">java.sun.com</a>)</li>
-                    <li> MinGW 2.0.0 plus the following updates: (all available
-                      at <a href=" http://www.mingw.org " target="_blank">www.mingw.org</a>)
+                    <li> Sun J2SDK 1.4.2+ (available at <a href=" http://java.sun.com " target="_blank">java.sun.com</a>)</li>
+                    <li> ANT 1.4.1+ (available at <a href=" http://www.apache.org " target="_blank">www.apache.org</a>)</li>
+                    <li> Win32</li>
                       <ul>
-                        <li>binutils 2.13.90</li>
-                        <li> w32api-2.2</li>
-                        <li> mingw-runtime-2.4</li>
-			<li> "Peter Puck's" DirectX8 binding "dx8libs.zip" at
-			<a href="http://www.urebelscum.speedhost.com/download.html" target= " _blank">
-			www.urebelscum.speedhost.com/download.html</a>
-			(Copy all his .a files into your MinGW installation's "lib" directory.)
-			</li>
-			<li> The DirectX9 SDK available at
-			<a href="http://www.microsoft.com/directx" target= " _blank">
-			www.microsoft.com/directx</a>
-			(The ant script expects this to be in c:\dx9.  If you
-			install elsewhere you will need to modify the Win32 plugin's
-			build.xml file.)
-                      </ul>
+                        <li> Microsoft Visual C++ (<a href="http://msdn.microsoft.com/vstudio/express/downloads/">Express Edition</a> is free)
+                        <li> The Microsoft <a href="http://www.microsoft.com/downloads/details.aspx?FamilyId=484269E2-3B89-47E3-8EB7-1F2BE6D7123A&displaylang=en">Platform SDK</a></li>
+				<li> The <a href="http://www.microsoft.com/downloads/details.aspx?FamilyId=09F7578C-24AA-4E0A-BF91-5FEC24C8C7BF&displaylang=en" target= " _blank">DirectX</a> SDK</li>
+			    </ul>
                     </li>
-                    <li> ANT 1.4.1 (available at <a href=" http://www.apache.org " target="_blank">www.apache.org</a>)</li>
+		    	  <li> OSX 10.2.x or greater</li>
+			  <li> Linux with 2.6 kernel </li>
                     <p>This project requires that the Java Utils library (jutil.jar) be built and placed
                     in this project's lib directories.  See the README for more detail.  For the
                     Java Utils library itself see
@@ -107,13 +85,15 @@
                     Links</strong></font></div></td></tr>
               <tr><td valign="top" bgcolor="#F8F8F8">
                     <a
-href="http://games-core.dev.java.net/sun_contrib_051903_javagames.pdf">
-Developer Agreement </a></td>
+href="http://www.javagaming.org/forums/index.php?board=27.0">
+JInput forums</a></td>
               </tr>
-              <tr> 
-                <td valign="top" bgcolor="#FFFFFF"><ul>
-
-                </ul></td>
+		  <tr>
+          		<td valign="top" bgcolor="#F8F8F8">
+                    <a
+href="http://games-core.dev.java.net/sun_contrib_051903_javagames.pdf">
+Developer Agreement </a>
+			</td>
               </tr>
             </table></td>
         </tr>
