Added a not to contact us in the forums if you want to get involved
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@182 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/www/index.html
+++ b/www/index.html
@@ -37,10 +37,11 @@
                     Status</strong></font></div></td>
               </tr>
               <tr>
-                <td bgcolor="#F8F8F8"><div align="justify">The intial implementation
+                <td bgcolor="#F8F8F8"><div align="justify"><p>The intial implementation
                     of the Java Input API is available for download from
                     <a href=" http://jinput.dev.java.net/source/browse/jinput/ ">CVS</a>.
                     This release contains a plug-in for Win32i, Linux, and OSX. Builds are available in the <a href="https://jinput.dev.java.net/servlets/ProjectDocumentList?folderID=5330&expandFolder=5330&folderID=5330">Documents and Files</a> area.
+			</p>
                     </div></td>
 
               </tr>
@@ -53,8 +54,8 @@
                     Started </strong></font></div></td>
               </tr>
               <tr>
-                <td valign="top" bgcolor="#F8F8F8"><p>This project has been built
-                    in the following environment:</p>
+                <td valign="top" bgcolor="#F8F8F8"><div align="justify"><p>This project has been built
+                    in the following environment:</p></div>
                   <ul>
                     <li> Sun J2SDK 1.4.2+ (available at <a href=" http://java.sun.com " target="_blank">java.sun.com</a>)</li>
                     <li> ANT 1.4.1+ (available at <a href=" http://www.apache.org " target="_blank">www.apache.org</a>)</li>
@@ -71,7 +72,13 @@
                     in this project's lib directories.  See the README for more detail.  For the
                     Java Utils library itself see
                     <a href="http://jutils.dev.java.net" target="_blank"> jutils.dev.java.net </a>
-                  </p></ul></td>
+                  </p></ul>
+			<div align="justify">
+  			  <p>
+                      If you wish to become involved in the JInput project, please stop by our <href="http://www.javagaming.org/forums/index.php?board=27.0">forums</a> and introduce yourself.
+			  </p>
+                  </div>
+		    </td>
               </tr>
             </table></td>
         </tr>
