Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@184 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/www/index.html
+++ b/www/index.html
@@ -92,6 +92,16 @@
               <tr>
                 <td valign="top" bgcolor="#6E94B7"><div align="left"><font color="#FFFFFF"><strong>Useful
                     Links</strong></font></div></td></tr>
+              <tr>
+                  <td valign="top" bgcolor="#F8F8F8">
+                     <a href="http://www.javagaming.org/forums/index.php?topic=16866.0">Getting started</a>
+	          </td
+              </tr>
+              <tr>
+                  <td valign="top" bgcolor="#F8F8F8">
+                     <a href="http://www.newdawnsoftware.com/resources/jinput/jinput_combined_dist_latest.zip">Latest distribution</a>
+	          </td
+              </tr>
               <tr><td valign="top" bgcolor="#F8F8F8">
                     <a
 href="http://www.javagaming.org/forums/index.php?board=27.0">
