--- a/applet/jinput.html
+++ b/applet/jinput.html
@@ -10,7 +10,7 @@
 			deployJava.setInstallerType('kernel');
 			// include any required packages as shown below
 			deployJava.setAdditionalPackages('javax.swing, javax.xml');
-			deployJava.runApplet({codebase:"file:/C:/code/workspace/jinput/applet/dist/",
+			deployJava.runApplet({codebase:".",
 		    	archive:"jinput.jar,jinput-test.jar,jinput-applet-test.jar", code:"net.java.games.input.applet.test.ControllerReadTestApplet",
 		    	width:"320", Height:"400"}, null, "1.4.2");
 		</script>
