Updated link to latest distribution
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@233 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/www/index.html
+++ b/www/index.html
@@ -99,7 +99,7 @@
               </tr>
               <tr>
                   <td valign="top" bgcolor="#F8F8F8">
-                     <a href="http://www.newdawnsoftware.com/resources/jinput/jinput_combined_dist_latest.zip">Latest distribution</a>
+                     <a href="https://jinput.dev.java.net/servlets/ProjectDocumentView?documentID=59031&showInfo=true">Latest distribution</a>
 	          </td
               </tr>
               <tr><td valign="top" bgcolor="#F8F8F8">
